--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,7 +11,7 @@
     "Banner.ActionBtn": "Get in touch",
     "AboutMe.Title": "About me",
     "AboutMe.Paragraphs": [
-        "In my <span class='underline'>4+ years as a developer</span>, I seek to train every day. I have worked writing <span class='underline'>unit tests</span>, <span class='underline'>performing continuous integration</span>, and covering backend developer roles with <span class='underline'>ExpressJS, NestJs, MongoDB and Mysql</span>. I have led teams having empathy, exercising motivation to partners, and setting plans and goals together.",
+        "In my <span class='underline'>4+ years as a developer</span>, I seek to train every day. I have worked writing <span class='underline'>unit tests</span>, performing <span class='underline'>continuous integration</span>, and covering backend developer roles with <span class='underline'>ExpressJS</span>, <span class='underline'>NestJs</span>, <span class='underline'>MongoDB</span> and <span class='underline'>Mysql</span>. I have led teams having empathy, exercising motivation to partners, and setting plans and goals together.",
         "My skills also include implementing system improvements, optimizing sites, standardizing patterns, and suggesting and executing ideas that add value to the project I'm working on.",
         "Some of the technologies that I have trained and worked on include (but are not limited to):"
     ],
